--- a/src/app/template/basicos/basicos.component.html
+++ b/src/app/template/basicos/basicos.component.html
@@ -1,1 +1,81 @@
-<p>basicos works!</p>
+<h2>Template: Basicos</h2>
+<hr>
+
+<div class="row">
+    <div class="col">
+
+        <form (ngSubmit)="guardar( miForm )" 
+               #miForm="ngForm"
+               autocomplete="off">
+            <!-- campo de producto -->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">Productos</label>
+                <div class="col-sm-9">
+                    <input type="text"
+                           class="form-control"
+                           ngModel
+                           name="producto"
+                           placeholder="Nombre del producto"
+                           required
+                           minlength="3">
+
+                    <span class="form-text text-danger">Debe tener al menos 3 letras</span>
+                </div>
+            </div>
+            <!-- campo de precio -->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">Precio</label>
+                <div class="col-sm-9">
+                    <input type="number"
+                           class="form-control"
+                           ngModel
+                           name="precio"
+                           required
+                           min="0"
+                           placeholder="Precio del producto">                    
+                </div>
+            </div>
+            <!-- campo de existencias -->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">Existencias</label>
+                <div class="col-sm-9">
+                    <input type="number"
+                           class="form-control"
+                           ngModel
+                           name="existencias"
+                           placeholder="Existencias del producto">                    
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <button type="submit"
+                            class="btn btn-primary float-end">
+                        Submit
+                    </button>
+                </div>
+            </div>
+
+        </form>
+
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col">
+
+        <span>Valid</span>
+        <pre>{{ miForm.valid }}</pre>
+
+        <span>Pristine</span>
+        <pre>{{ miForm.pristine | json }}</pre>
+
+        <span>Touched</span>
+        <pre>{{ miForm.touched | json }}</pre>
+        
+        <span>Value</span>
+        <pre>{{ miForm.value | json }}</pre>
+
+    </div>
+</div>
