--- a/src/app/template/dinamicos/dinamicos.component.html
+++ b/src/app/template/dinamicos/dinamicos.component.html
@@ -1,1 +1,91 @@
-<p>dinamicos works!</p>
+<h2>Template: <small>Dinamicos</small></h2>
+<hr>
+
+<form (ngSubmit)="guardar()"
+       #miFormDinamico="ngForm"
+       autocomplete="off">
+
+
+    <!-- Nombre -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Nombre</label>
+        <div class="col-sm-9">
+
+            <input class="form-control"
+                    [ngModel]="persona.nombre"
+                    name="nombre"
+                    type="text"
+                    placeholder="Nombre..."
+                    minlength="1"
+                    required>
+
+                <span class="form-text text-danger"
+                      *ngIf="nombreValido()">
+                    Este campo es obligatorio
+                </span>
+        </div>
+    </div>
+
+    <!-- Agregar -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Agregar</label>
+        <div class="col-sm-9">
+
+            <div class="input-group">
+                <input class="form-control"                    
+                        placeholder="Agregar favorito..."
+                        [(ngModel)]="nuevoJuego"
+                        (keyup.enter)="agregarJuego()"
+                        name="nuevoJuego">
+
+                <button class="btn btn-outline-primary"
+                        type="button"
+                        (click)="agregarJuego()">
+                    Agregar
+                </button>                        
+            </div>
+        </div>
+    </div>
+
+    <!-- Lista de juegos favoritos -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Favoritos</label>
+        <div class="col-sm-9">
+
+            <div *ngFor="let el of persona.favoritos; let i = index"
+                 class="input-group mb-2">
+                <input [(ngModel)]="el.nombre"
+                        name="fav_{{i}}"
+                        class="form-control"
+                        required >
+
+                <button class="btn btn-outline-danger"
+                        type="button"
+                        (click)="eliminar(i)">
+                    Eliminar
+                </button>    
+            </div>
+
+
+        </div>
+    </div>
+
+
+    <div class="row">        
+        <div class="col-sm-12">
+            <button class="btn btn-primary float-end"
+                    type="button"
+                    [disabled]="miFormDinamico.invalid"
+                    (click)="guardar()"
+                    required>
+                Guardar
+            </button>
+        </div>
+    </div>
+
+
+</form>
+
+
+<span>Persona</span>
+<pre>{{persona | json}}</pre>
