--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,78 @@
-<p>dinamicos works!</p>
+<h2>Reactivos: <small>Dinamicos</small></h2>
+<hr>
+
+<form autocomplete="off">
+
+
+    <!-- Nombre -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Nombre</label>
+        <div class="col-sm-9">
+
+            <input class="form-control"                                        
+                    placeholder="Nombre...">
+
+                <span class="form-text text-danger">
+                    Este campo es obligatorio
+                </span>
+        </div>
+    </div>
+
+
+    <!-- Agregar -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Agregar</label>
+        <div class="col-sm-9">
+
+            <div class="input-group">
+                <input class="form-control"                    
+                        placeholder="Agregar favorito..."
+                        (keyup.enter)="1+1">
+
+                <button class="btn btn-outline-primary"
+                        type="button"
+                        (click)="1+1">
+                    Agregar
+                </button>                        
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- Lista de juegos favoritos -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Favoritos</label>
+        <div class="col-sm-9">
+
+            <div class="input-group mb-2">
+                <input class="form-control">
+
+                <button class="btn btn-outline-danger"
+                        type="button"
+                        (click)="1+1">
+                    Eliminar
+                </button>    
+            </div>
+
+
+        </div>
+    </div>
+
+
+    <div class="row">        
+        <div class="col-sm-12">
+            <button class="btn btn-primary float-end"
+                    type="button"
+                    (click)="1+1">
+                Guardar
+            </button>
+        </div>
+    </div>
+
+
+</form>
+
+
+<!-- <span>Persona</span>
+<pre>{{persona | json}}</pre> -->
