--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col">
 
-        <form autocomplete="off" [formGroup]="miForm">
+        <form (ngSubmit)="guardar()" autocomplete="off" [formGroup]="miForm">
             <!-- campo de producto -->
             <div class="mb-3 row">
                 <label class="col-sm-3 col-form-label">Productos</label>
@@ -14,7 +14,8 @@
                            formControlName="nombre"                    
                            placeholder="Nombre del producto">
 
-                    <span class="form-text text-danger">
+                    <span class="form-text text-danger"
+                          *ngIf="campoEsValido('nombre')">
                           Debe tener al menos 3 letras
                     </span>                    
                 </div>
@@ -29,7 +30,8 @@
                            formControlName="precio"                                                 
                            placeholder="Precio del producto">        
                     
-                    <span class="form-text text-danger">
+                    <span class="form-text text-danger"
+                          *ngIf="campoEsValido('precio')">
                            El precio debe ser igual o mayor a 0
                     </span>            
                 </div>
@@ -43,7 +45,11 @@
                     <input type="number"
                            class="form-control"  
                            formControlName="existencias"                                                    
-                           placeholder="Existencias del producto">                    
+                           placeholder="Existencias del producto">  
+                    <span class="form-text text-danger"
+                           *ngIf="campoEsValido('existencias')">
+                            Las existencias deben ser igual o mayor a 0
+                    </span>                  
                 </div>
             </div>
 
@@ -77,6 +83,9 @@
         
         <span>Value</span>
         <pre>{{ miForm.value | json }}</pre>
+        
+        <span>Precio</span>
+        <pre>{{ miForm.controls['precio'].errors | json }}</pre>
 
     </div>
 </div>
